# initrs

./: Cargo.toml
.github/workflows/: rust.yml
services/: NetworkManager.toml  agetty.toml  dbus.toml  io.toml  machine-id.toml  mounts.toml  utmp.toml
services/enabled/: dbus
src/: colors.rs  command.rs  errors.rs  lib.rs  log.rs  main.rs  mount.rs  unwrap.rs
src/init/: command.rs  mod.rs
src/init/services/: service.rs
src/initcli/: cli.rs  disable.rs  enable.rs  manpage.rs  mod.rs
src/initcli/utils/: root.rs
src/mount/: local.rs  mod.rs  vfs.rs
src/services/: service.rs
