[package]
name = "initrs"
version = "0.1.0"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/MedzikUser/initrs"
repository = "https://github.com/MedzikUser/initrs.git"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
libc = "0.2.126"
nix = { version = "0.24.1", default-features = false, features = ["ucontext"] }
thiserror = "1.0.31"
toml = "0.5.9"
