[package]
name = "initrs"
version = "0.1.0"
authors = ["MedzikUser <nivua1fn@duck.com>"]
homepage = "https://github.com/MedzikUser/initrs"
repository = "https://github.com/MedzikUser/initrs.git"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
libc = "0.2.126"
nix = "0.24.1"
thiserror = "1.0.31"
toml = "0.5.9"
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
clap_mangen = "0.1.10"
